--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -16,18 +16,26 @@
 .header {
   display: flex;
   flex-direction: column;
+  gap: 10px;
+}
+
+.name-title {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .header .heading {
-  font-size: 2.7rem;
+  font-size: 2rem;
   font-weight: 500;
   text-transform: capitalize;
 }
 
 .header .subHeading {
-  color: var(--color);
-  font-weight: 500;
-  font-size: 1.1rem;
+  font-size: 2rem; 
+  font-weight: 500; 
+  text-transform: capitalize; 
+  color: inherit;
 }
 
 .header .links {
@@ -54,6 +62,7 @@
 
 .main {
   display: flex;
+  flex-direction: column;
   gap: 30px;
 }
 
@@ -80,7 +89,7 @@
 .section .content {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 6px;
   padding: 10px 0;
 }
 .section .content .item {
@@ -88,10 +97,34 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
-  padding-bottom: 10px;
+  padding-bottom: 6px;
 }
 .section .content .item:last-child {
   border-bottom: none;
+}
+
+.item-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item-title {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.education-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.education-title {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 .content .title {
@@ -106,16 +139,57 @@
   font-size: 1rem;
 }
 
-.content .overview {
+.education-dates {
+  align-self: flex-end;
   font-size: 0.875rem;
 }
 
+.courses {
+  font-style: italic;
+  margin-top: 4px;
+}
+
+.location-dates {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.location {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+
+.dates {
+  font-size: 0.875rem;
+}
+
+.project-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.project-links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.content .overview {
+  font-size: 0.875rem;
+}
+.content .location {
+  align-self: flex-end;
+}
 .content .link {
   display: flex;
   gap: 5px;
   font-size: 0.75rem;
   cursor: pointer;
   color: var(--color);
+  align-self: flex-end;
 }
 .content .link svg {
   height: 14px;
